# github-agents-sim

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PHASE1_SUMMARY.md  README.md  claude_progress.json  pyproject.toml
.claude/: settings.local.json
config/: personas.yaml  roles.yaml
db/: github_sim.db
examples/: run_simulation.py
src/github_agent_sim/: __init__.py
src/github_agent_sim/agents/: __init__.py  action.py  base_agent.py  decision.py  perception.py
src/github_agent_sim/agents/prompts/: role_templates.py
src/github_agent_sim/agents/roles/: __init__.py  bot.py  contributor.py  maintainer.py  reviewer.py
src/github_agent_sim/analysis/logger/: __init__.py
src/github_agent_sim/config/: settings.py
src/github_agent_sim/data_pipeline/fetchers/: __init__.py  gh_archive.py
src/github_agent_sim/data_pipeline/processors/: __init__.py  behavior_extractor.py  event_parser.py
src/github_agent_sim/data_pipeline/storage/: database.py  store.py
src/github_agent_sim/simulation/: event_bus.py  git_sandbox.py  message_queue.py
tests/: test_config.py  test_event_bus.py  test_git_sandbox.py  test_message_queue.py
