[project]
name = "github-agent-sim"
version = "0.1.0"
description = "GitHub 开发者行为多智能体模拟系统"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["github", "agent", "simulation", "langchain", "ai"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # LLM Framework
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",

    # Git Operations
    "gitpython>=3.1.43",

    # Data Storage
    "sqlite-utils>=3.36",
    "chromadb>=0.5.0",

    # Data Processing
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",

    # HTTP Client
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",

    # Code Quality
    "black>=24.1.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",

    # Debugging
    "ipython>=8.20.0",
]

analysis = [
    # Visualization
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "networkx>=3.2.1",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/your-username/github-agent-sim"
Repository = "https://github.com/your-username/github-agent-sim"
Documentation = "https://github.com/your-username/github-agent-sim#readme"

[project.scripts]
github-agent-sim = "github_agent_sim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_agent_sim"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["github_agent_sim"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/github_agent_sim --cov-report=term-missing"
